--- a/examples/tutorials/basic_example.ipynb
+++ b/examples/tutorials/basic_example.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:nlb_tools.nwb_interface:Loading /snel/home/fpei/lvm/code/dandi/000128/sub-Jenkins/sub-Jenkins_ses-large_desc-test_ecephys.nwb\n",
-      "INFO:nlb_tools.nwb_interface:Loading /snel/home/fpei/lvm/code/dandi/000128/sub-Jenkins/sub-Jenkins_ses-large_desc-train_behavior+ecephys.nwb\n"
+      "INFO:nlb_tools.nwb_interface:Loading ../../mc_maze_large/sub-Jenkins/sub-Jenkins_ses-large_desc-test_ecephys.nwb\n",
+      "/Users/gabrielsalmon/Desktop/bci/lib/python3.11/site-packages/hdmf/utils.py:668: UserWarning: Ignoring cached namespace 'hdmf-common' version 1.5.0 because version 1.8.0 is already loaded.\n",
+      "  return func(args[0], **pargs)\n",
+      "/Users/gabrielsalmon/Desktop/bci/lib/python3.11/site-packages/hdmf/utils.py:668: UserWarning: Ignoring cached namespace 'core' version 2.4.0 because version 2.7.0 is already loaded.\n",
+      "  return func(args[0], **pargs)\n",
+      "/Users/gabrielsalmon/Desktop/bci/lib/python3.11/site-packages/hdmf/utils.py:668: UserWarning: Ignoring cached namespace 'hdmf-experimental' version 0.1.0 because version 0.5.0 is already loaded.\n",
+      "  return func(args[0], **pargs)\n",
+      "INFO:nlb_tools.nwb_interface:Loading ../../mc_maze_large/sub-Jenkins/sub-Jenkins_ses-large_desc-train_behavior+ecephys.nwb\n"
      ]
     }
    ],
@@ -174,7 +180,7 @@
     "## Load data from NWB file\n",
     "\n",
     "dataset_name = 'mc_maze_large'\n",
-    "datapath = './000138/sub-Jenkins/'\n",
+    "datapath = '../../mc_maze_large/sub-Jenkins/'\n",
     "dataset = NWBDataset(datapath)"
    ]
   },
@@ -204,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +629,7 @@
        "[1565021 rows x 170 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,8 +640,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop days, time range is half an hour"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +998,7 @@
        "[600 rows x 18 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1021,48 @@
       "\n",
       "fields: ['start_time', 'stop_time', 'move_onset_time', 'split', 'trial_type', 'trial_version', 'maze_id', 'success', 'target_on_time', 'go_cue_time', 'rt', 'delay', 'num_targets', 'target_pos', 'num_barriers', 'barrier_pos', 'active_target', 'cursor_pos', 'eye_pos', 'hand_pos', 'hand_vel']\n",
       "\n",
-      "trial_type: A number representing the maze configuration that was used for the trial\n"
+      "start_time: Start time of epoch, in seconds\n",
+      "\n",
+      "stop_time: Stop time of epoch, in seconds\n",
+      "\n",
+      "move_onset_time: Time of movement onset, calculated offline using a robust algorithm\n",
+      "\n",
+      "split: Trial split that the trial belongs to for the Neural Latents Benchmark. Can be \"train\", \"val\", \"test\", or \"none\"\n",
+      "\n",
+      "trial_type: A number representing the maze configuration that was used for the trial\n",
+      "\n",
+      "trial_version: A number 0-2 indicating which variant of the maze is presented. 0 is 1-target no-barrier, 1 is 1-target with barriers, 2 is 3-target with barriers\n",
+      "\n",
+      "maze_id: A unique identifier for each maze, lumping all 3 `trial_version`s. `trial_type` is not unique across datasets, but `maze_id` is\n",
+      "\n",
+      "success: If the monkey was successful on the trial. In these benchmark files, all unsuccessful trials have been removed\n",
+      "\n",
+      "target_on_time: Time of target presentation, as detected by the photobox\n",
+      "\n",
+      "go_cue_time: Time of go cue delivery, as detected by the photobox\n",
+      "\n",
+      "rt: Delay between go cue and movement onset\n",
+      "\n",
+      "delay: Delay between target presentation and go cue, in ms\n",
+      "\n",
+      "num_targets: The number of targets for the trial\n",
+      "\n",
+      "target_pos: Array with rows containing x and y coordinates of target location, respectively, for each target\n",
+      "\n",
+      "num_barriers: The number of barriers for the trial\n",
+      "\n",
+      "barrier_pos: Array with rows containing barrier location information. The first two values are the x and y coordinates of the center of the barrier, and the last two are half the width and height of the barrier, respectively\n",
+      "\n",
+      "active_target: Which target is reachable and was hit. Value is the index of the target in target_pos list\n",
+      "\n",
+      "cursor_pos: Cursor position in mm. First column x, second column y\n",
+      "\n",
+      "eye_pos: Monkey eye position in mm. First column x, second column y\n",
+      "\n",
+      "hand_pos: Monkey hand position in mm. First column x, second column y\n",
+      "\n",
+      "hand_vel: Monkey hand velocity in mm/s, calculated from monkey hand position. First column x, second column y\n",
+      "\n"
      ]
     }
    ],
@@ -1017,8 +1071,8 @@
     "print(f'bin_width: {dataset.bin_width}', end='\\n\\n')\n",
     "print(f'fields: {list(dataset.descriptions.keys())}', end='\\n\\n')\n",
     "\n",
-    "randkey = np.random.choice(list(dataset.descriptions.keys()))\n",
-    "print(f'{randkey}: {dataset.descriptions[randkey]}')"
+    "for description in list(dataset.descriptions.keys()):\n",
+    "    print(f'{description}: {dataset.descriptions[description]}', end='\\n\\n')"
    ]
   },
   {
@@ -1056,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1271,7 @@
     "import scipy.signal as signal\n",
     "kern_sd_ms = 40\n",
     "kern_sd = int(round(kern_sd_ms / dataset.bin_width))\n",
-    "window = signal.gaussian(kern_sd * 6, kern_sd, sym=True)\n",
+    "window = signal.windows.gaussian(kern_sd * 6, kern_sd, sym=True)\n",
     "window /= np.sum(window)\n",
     "filt = lambda x: np.convolve(x, window, 'same')\n",
     "\n",
@@ -1300,15 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['mc_maze_large'])\n",
-      "dict_keys(['eval_spikes_heldout', 'train_behavior', 'eval_behavior', 'eval_spikes_heldin_forward', 'eval_spikes_heldout_forward', 'psth'])\n"
+     "ename": "AttributeError",
+     "evalue": "module 'scipy.signal' has no attribute 'gaussian'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# If 'val' phase, make the target data\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m phase \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# Note that the RTT task is not well suited to trial averaging, so PSTHs are not made for it\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     target_dict \u001b[38;5;241m=\u001b[39m \u001b[43mmake_eval_target_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_trial_split\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meval_trial_split\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mval\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minclude_psth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_file\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# Demonstrate target_dict structure\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(target_dict\u001b[38;5;241m.\u001b[39mkeys())\n",
+      "File \u001b[0;32m~/Desktop/bci/nlb_tools/make_tensors.py:659\u001b[0m, in \u001b[0;36mmake_eval_target_tensors\u001b[0;34m(dataset, dataset_name, train_trial_split, eval_trial_split, update_params, save_file, return_dict, save_path, include_psth, seed)\u001b[0m\n\u001b[1;32m    657\u001b[0m     logger\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPSTHs are not supported for this dataset, skipping...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    658\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 659\u001b[0m     (train_cond_idx, eval_cond_idx), psths, comb \u001b[38;5;241m=\u001b[39m \u001b[43m_make_psth\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meval_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpsth_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    661\u001b[0m     data_dict[dataset_name \u001b[38;5;241m+\u001b[39m suf][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meval_cond_idx\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m eval_cond_idx\n\u001b[1;32m    662\u001b[0m     data_dict[dataset_name \u001b[38;5;241m+\u001b[39m suf][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain_cond_idx\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m train_cond_idx\n",
+      "File \u001b[0;32m~/Desktop/bci/nlb_tools/make_tensors.py:1209\u001b[0m, in \u001b[0;36m_make_psth\u001b[0;34m(dataset, train_mask, eval_mask, ignore_mask, make_params, cond_fields, kern_sd, pad, psth_len, seg_len, skip_mask)\u001b[0m\n\u001b[1;32m   1207\u001b[0m dataset\u001b[38;5;241m.\u001b[39mtrial_info \u001b[38;5;241m=\u001b[39m ti\n\u001b[1;32m   1208\u001b[0m dataset\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m dataset\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mloc[:, neur]\n\u001b[0;32m-> 1209\u001b[0m \u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msmooth_spk\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkern_sd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignal_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mspikes\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mheldout_spikes\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moverwrite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_nans\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m   1210\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m bin_width \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   1211\u001b[0m     dataset\u001b[38;5;241m.\u001b[39mresample(bin_width)\n",
+      "File \u001b[0;32m~/Desktop/bci/nlb_tools/nwb_interface.py:688\u001b[0m, in \u001b[0;36mNWBDataset.smooth_spk\u001b[0;34m(self, gauss_width, signal_type, name, overwrite, ignore_nans, parallelized, dtype)\u001b[0m\n\u001b[1;32m    686\u001b[0m win_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m6\u001b[39m \u001b[38;5;241m*\u001b[39m gauss_bin_std)\n\u001b[1;32m    687\u001b[0m \u001b[38;5;66;03m# Create Gaussian kernel\u001b[39;00m\n\u001b[0;32m--> 688\u001b[0m window \u001b[38;5;241m=\u001b[39m \u001b[43msignal\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgaussian\u001b[49m(win_len, gauss_bin_std, sym\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    689\u001b[0m window \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(window)\n\u001b[1;32m    690\u001b[0m \u001b[38;5;66;03m# Extract spiking data\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'scipy.signal' has no attribute 'gaussian'"
      ]
     }
    ],
@@ -1447,7 +1507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.4"
   },
   "metadata": {
    "interpreter": {
